--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ paginate: 6
 paginate_path: /page:num/
 
 # Other
-highlighter: rouge
+highlighter: none
 markdown: kramdown
 kramdown:
    syntax_highlighter_opts:
