--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: "POLY_"
 title: "POLY_"
 description: "Investigating the “many”" #of culture, music and science
-logo: 'assets/images/logo.png'
+logo: 'assets/images/patreonHeader010.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: ''
