--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ name: "POLY_"
 title: "POLY_"
 description: "Investigating the “many”" #of culture, music and science
 logo: 'assets/images/patreonHeader010.png'
+altlogo: 'assets/images/logo1.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: ''
