--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "POLY_"
 title: "POLY_"
-description: "Investigating the “many”" #of culture, music and science
+description: "Devoted to the “many” parts" #of culture, music and science"
 logo: 'assets/images/patreonHeader010.png'
 altlogo: 'assets/images/logo1.png'
 favicon: 'assets/images/logo.png'
